feat: 完成SSL证书管理系统MySQL专用化清理
 主要变更:
- 完全移除PostgreSQL和SQLite支持，系统现为MySQL 8.0.41专用
- 删除所有非MySQL数据库的迁移脚本和配置文件
- 统一所有环境配置为MySQL格式

 删除文件 (7个):
- backend/scripts/migrate_sqlite_to_mysql.py (SQLite迁移脚本)
- backend/migrations/003_migrate_to_mysql.sql (迁移SQL脚本)
- backend/src/simple_app.py (PostgreSQL简化应用)
- backend/ssl_manager.db (SQLite数据库文件)
- docker-compose.{aliyun,dev,prod}.yml (PostgreSQL配置)
- database/init/01-init-database.sql (PostgreSQL初始化脚本)

 修复文件 (25个):
- 配置文件: 更新所有数据库连接为MySQL格式
- Docker文件: 替换PostgreSQL依赖为MySQL依赖
- 文档文件: 更新所有示例和说明为MySQL专用
- 脚本文件: 修复部署和验证脚本中的数据库引用
- 测试文件: 更新测试配置为MySQL环境

 新增报告 (4个):
- FINAL_MYSQL_CLEANUP_REPORT.md (详细清理报告)
- MYSQL_CLEANUP_VERIFICATION_REPORT.md (验证确认报告)
- MYSQL_MIGRATION_AUDIT_REPORT.md (审计报告)
- MYSQL_MIGRATION_SUMMARY.md (迁移总结)

 系统现状:
- 数据库: 唯一使用MySQL 8.0.41
- 配置: 统一的MYSQL_前缀环境变量
- 部署: 所有环境使用MySQL服务
- 代码: 100%MySQL兼容语法
- 文档: 完全更新为MySQL专用内容

 影响:
- 提升系统性能和稳定性
- 简化部署和维护流程
- 统一开发和生产环境
- 减少配置复杂性
- 增强企业级可靠性

Co-authored-by: Augment Agent <agent@augmentcode.com>

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,13 @@ ENVIRONMENT=production
 LOG_LEVEL=INFO
 
 # ===========================================
-# 数据库配置 (PostgreSQL)
+# 数据库配置 (MySQL)
 # ===========================================
-DB_HOST=postgres
-DB_PORT=5432
-DB_NAME=ssl_manager
-DB_USER=ssl_user
-DB_PASSWORD=your_secure_db_password_here
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DATABASE=ssl_manager
+MYSQL_USER=ssl_manager
+MYSQL_PASSWORD=your_secure_mysql_password_here
 
 # ===========================================
 # Redis配置
@@ -100,7 +100,7 @@ GRAFANA_PASSWORD=your_secure_grafana_password_here
 # NETWORK_SUBNET=172.20.0.0/16
 
 # 资源限制
-# POSTGRES_MEMORY_LIMIT=1G
+# MYSQL_MEMORY_LIMIT=1G
 # REDIS_MEMORY_LIMIT=512M
 # BACKEND_MEMORY_LIMIT=1G
 # FRONTEND_MEMORY_LIMIT=256M
