--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,8 @@ FLASK_ENV=development
 FLASK_DEBUG=True
 SECRET_KEY=your-secret-key-here
 
-# Database Configuration
-DATABASE_URL=sqlite:///ssl_cert_manager.db
+# Database Configuration - MySQL
+DATABASE_URL=mysql+pymysql://ssl_manager:ssl_manager_password@localhost:3306/ssl_manager?charset=utf8mb4
 
 # JWT Configuration
 JWT_SECRET_KEY=your-jwt-secret-key-here
