feat: 完善.env.example配置文件和环境变量安全管理
🔧 .env.example文件完善:
- 新增53个环境变量，总数达到91个
- 覆盖率100% (91/80个必需变量)
- 标准化所有敏感配置为CHANGE_THIS格式
- 添加详细的使用说明和安全提示
- 提供密钥生成命令指导

📋 新增配置类别:
- 数据库高级配置 (连接池、性能优化、SSL)
- 安全配置完善 (JWT、密码策略、速率限制)
- 前端开发配置 (Vite、Vue、构建配置)
- SSL证书管理配置 (ACME、存储路径、续期)
- 邮件通知配置 (SMTP完整配置)
- 监控日志配置 (Grafana、ELK Stack)
- 服务端口配置 (所有服务端口)

🛠️ 新增工具和文档:
- scripts/validate_env_example.py - 环境变量验证工具
- ENVIRONMENT_SECURITY_GUIDE.md - 环境变量安全指南
- ENV_EXAMPLE_IMPROVEMENT_REPORT.md - 完善工作报告

🔐 安全性改进:
- 所有密码使用安全格式标识
- 提供强密钥生成指导
- 详细的安全存储说明
- 生产环境部署建议
- 密码轮换策略指导

📊 验证结果:
✅ 包含91个环境变量 (261行)
✅ 覆盖所有80个必需变量
✅ 12个安全配置需要修改
✅ 自动化验证工具通过

🎯 使用改进:
- 详细的配置分类和注释
- 开发/生产环境使用指导
- 快速部署命令说明
- 安全最佳实践建议

为SSL证书管理项目提供了完整、安全、易用的环境变量配置模板，
大大简化了项目部署和配置过程，提高了安全性和可维护性。

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,28 @@
-# SSL Certificate Manager - 环境变量配置模板
-# 复制此文件为 .env 并根据实际情况修改配置值
+# ===========================================
+# SSL证书管理系统 - 环境变量配置模板
+# ===========================================
+#
+# 📋 使用说明:
+# 1. 复制此文件为 .env: cp .env.example .env
+# 2. 根据实际环境修改配置值
+# 3. 生产环境请务必修改所有密码和密钥！
+#
+# 🔐 安全提示:
+# - 所有包含"CHANGE_THIS"的值都必须修改
+# - 密钥长度建议至少32位字符
+# - 生成安全密钥命令: openssl rand -base64 32
+# - 生成安全密码命令: openssl rand -base64 16
+#
+# 🚀 快速部署:
+# - 开发环境: ./scripts/deploy-local.sh
+# - 生产环境: ./scripts/deploy-production.sh
+#
+# 📖 详细文档: 请参考 README.md 和 docs/ 目录
 
 # ===========================================
 # 基础配置
 # ===========================================
 ENVIRONMENT=production
-LOG_LEVEL=INFO
 
 # ===========================================
 # 数据库配置 (MySQL)
@@ -14,21 +31,33 @@ MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_DATABASE=ssl_manager
 MYSQL_USER=ssl_manager
-MYSQL_PASSWORD=your_secure_mysql_password_here
+MYSQL_USERNAME=ssl_manager
+MYSQL_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD
+MYSQL_ROOT_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_ROOT_PASSWORD
+MYSQL_CHARSET=utf8mb4
+
+# 数据库连接配置
+DATABASE_URL=mysql+pymysql://ssl_manager:CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD@mysql:3306/ssl_manager?charset=utf8mb4
 
 # ===========================================
 # Redis配置
 # ===========================================
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=your_secure_redis_password_here
+REDIS_PASSWORD=CHANGE_THIS_TO_A_SECURE_REDIS_PASSWORD
 
 # ===========================================
 # 安全配置
 # ===========================================
-# 请务必更改为强密码！
-SECRET_KEY=your-very-secure-secret-key-change-this-in-production
-JWT_SECRET_KEY=your-very-secure-jwt-secret-key-change-this-too
+# 请务必更改为强密码！(至少32位字符)
+# 生成强密钥命令: openssl rand -base64 32
+SECRET_KEY=CHANGE_THIS_TO_A_SECURE_32_CHAR_SECRET_KEY_IN_PRODUCTION
+JWT_SECRET_KEY=CHANGE_THIS_TO_A_SECURE_32_CHAR_JWT_SECRET_KEY_TOO
+CSRF_SECRET_KEY=CHANGE_THIS_TO_A_SECURE_32_CHAR_CSRF_SECRET_KEY
+
+# JWT配置
+JWT_ACCESS_TOKEN_EXPIRES=3600
+JWT_ALGORITHM=HS256
 
 # ===========================================
 # SSL证书配置
@@ -36,27 +65,58 @@ JWT_SECRET_KEY=your-very-secure-jwt-secret-key-change-this-too
 # Let's Encrypt ACME目录URL
 ACME_DIRECTORY_URL=https://acme-v02.api.letsencrypt.org/directory
 # 测试环境使用: https://acme-staging-v02.api.letsencrypt.org/directory
+ACME_STAGING_URL=https://acme-staging-v02.api.letsencrypt.org/directory
+
+# SSL证书存储路径
+SSL_CERT_PATH=/app/certs
+CERT_STORAGE_PATH=/app/certs
+
+# 默认CA提供商
+DEFAULT_CA=letsencrypt
 
 # ===========================================
 # 域名配置
 # ===========================================
 DOMAIN_NAME=ssl.gzyggl.com
+EMAIL=admin@gzyggl.com
+
 # 前端API基础URL
 VITE_API_BASE_URL=/api
+
+# CORS配置
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # ===========================================
 # 服务端口配置 (可选，默认通过反向代理访问)
 # ===========================================
-# BACKEND_PORT=8000
-# FRONTEND_PORT=80
-# PROMETHEUS_PORT=9090
-# GRAFANA_PORT=3000
+BACKEND_PORT=8000
+FRONTEND_PORT=80
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3000
+HTTP_PORT=80
+HTTPS_PORT=443
+NGINX_HTTP_PORT=80
+NGINX_HTTPS_PORT=443
+
+# ===========================================
+# 应用环境配置
+# ===========================================
+FLASK_ENV=production
+FLASK_DEBUG=false
+
+# 日志配置
+LOG_LEVEL=INFO
+LOG_FILE=/app/logs/ssl_manager.log
 
 # ===========================================
 # 性能配置
 # ===========================================
 # 后端工作进程数
 BACKEND_WORKERS=2
+WORKERS=2
+
+# 实例标识
+INSTANCE_ID=backend1
 
 # ===========================================
 # 监控配置
@@ -66,7 +126,7 @@ METRICS_PORT=9090
 
 # Grafana配置
 GRAFANA_USER=admin
-GRAFANA_PASSWORD=your_secure_grafana_password_here
+GRAFANA_PASSWORD=CHANGE_THIS_TO_A_SECURE_GRAFANA_PASSWORD
 
 # ===========================================
 # 阿里云特定配置 (可选)
@@ -86,12 +146,74 @@ GRAFANA_PASSWORD=your_secure_grafana_password_here
 # ===========================================
 # 邮件通知配置 (可选)
 # ===========================================
-# SMTP_HOST=smtp.example.com
-# SMTP_PORT=587
-# SMTP_USER=your_email@example.com
-# SMTP_PASSWORD=your_email_password
-# SMTP_FROM=ssl-manager@example.com
+# SMTP服务器配置
+SMTP_SERVER=smtp.gmail.com
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=CHANGE_THIS_TO_YOUR_EMAIL@example.com
+SMTP_PASSWORD=CHANGE_THIS_TO_YOUR_EMAIL_PASSWORD
+SMTP_USE_TLS=true
+
+# 通知邮件配置
 # NOTIFICATION_EMAIL=admin@example.com
+
+# ===========================================
+# 前端开发配置 (开发环境使用)
+# ===========================================
+# 开发服务器配置
+VITE_DEV_SERVER_HOST=0.0.0.0
+VITE_DEV_SERVER_PORT=3000
+VITE_DEV_SERVER_OPEN=false
+VITE_DEV_SERVER_CORS=true
+
+# 代理配置
+VITE_PROXY_ENABLED=true
+VITE_PROXY_TARGET=http://localhost:5000
+
+# API配置
+API_BASE_URL=/api
+
+# 构建配置
+VITE_BUILD_MINIFY=true
+VITE_BUILD_SOURCEMAP=false
+VITE_APP_VERSION=1.0.0
+
+# Vue应用配置
+VUE_APP_API_BASE_URL=/api
+VUE_APP_TITLE=SSL证书管理器
+VUE_APP_VERSION=1.0.0
+
+# ===========================================
+# 数据库初始化配置 (可选)
+# ===========================================
+# SKIP_DB_INIT=false
+# SKIP_MIGRATIONS=false
+
+# ===========================================
+# 安全配置 (高级)
+# ===========================================
+# 密码策略
+PASSWORD_MIN_LENGTH=8
+BCRYPT_LOG_ROUNDS=12
+
+# 速率限制
+RATE_LIMIT_DEFAULT=100
+RATE_LIMIT_STORAGE_URL=redis://redis:6379/1
+
+# ===========================================
+# SSL证书管理配置 (高级)
+# ===========================================
+# 证书清理和续期
+CERT_CLEANUP_DAYS=30
+CERT_RENEWAL_DAYS=30
+
+# 客户端配置
+CLIENT_HEARTBEAT_INTERVAL=60
+CLIENT_OFFLINE_THRESHOLD=300
+
+# Webhook配置
+WEBHOOK_TIMEOUT=30
+WEBHOOK_RETRY_COUNT=3
 
 # ===========================================
 # 高级配置 (通常不需要修改)
@@ -105,3 +227,35 @@ GRAFANA_PASSWORD=your_secure_grafana_password_here
 # BACKEND_MEMORY_LIMIT=1G
 # FRONTEND_MEMORY_LIMIT=256M
 # NGINX_MEMORY_LIMIT=256M
+
+# ===========================================
+# MySQL高级配置 (可选)
+# ===========================================
+# 连接池配置
+MYSQL_POOL_SIZE=10
+MYSQL_MAX_OVERFLOW=20
+MYSQL_POOL_TIMEOUT=30
+MYSQL_POOL_RECYCLE=3600
+
+# 性能配置
+MYSQL_MAX_CONNECTIONS=200
+MYSQL_INNODB_BUFFER_POOL_SIZE=128M
+MYSQL_INNODB_LOG_FILE_SIZE=64M
+MYSQL_QUERY_CACHE_SIZE=32M
+
+# SSL配置 (可选)
+MYSQL_SSL_DISABLED=true
+MYSQL_SSL_CA=/path/to/ca.pem
+MYSQL_SSL_CERT=/path/to/client-cert.pem
+MYSQL_SSL_KEY=/path/to/client-key.pem
+
+# ===========================================
+# 监控和日志配置 (可选)
+# ===========================================
+# Grafana管理员配置
+GRAFANA_ADMIN_PASSWORD=CHANGE_THIS_TO_A_SECURE_GRAFANA_ADMIN_PASSWORD
+
+# ELK Stack配置 (如果使用)
+ELASTICSEARCH_HOSTS=elasticsearch:9200
+KIBANA_HOST=kibana:5601
+FLUENTD_PORT=24224
