fix: 修正环境变量配置中的主机地址问题
🔧 主要修正:
- 修正MYSQL_HOST从'mysql'改为'127.0.0.1' (避免Docker服务名误解)
- 修正REDIS_HOST从'redis'改为'127.0.0.1' (适用于独立部署)
- 修正其他服务地址配置 (Elasticsearch, Kibana等)
- 更新VITE_PROXY_TARGET为正确的后端地址

📋 新增Docker专用配置:
- 创建.env.docker.example专用于Docker环境
- Docker环境使用服务名 (mysql, redis, backend等)
- 独立部署使用IP地址 (127.0.0.1等)

📖 配置说明优化:
- 添加详细的Docker vs 独立部署说明
- 明确DATABASE_URL的构建逻辑
- 说明程序如何使用环境变量构建连接

🆕 新增文档:
- ENV_CONFIG_GUIDE.md - 环境变量配置指南
- 详细的配置模板选择说明
- 常见问题和最佳实践

📝 文档更新:
- 更新README.md部署说明
- 添加配置文件选择指导
- 更新.gitignore允许Docker配置模板

🎯 解决的问题:
- 避免了Docker服务名在独立部署中的误解
- 提供了适合不同部署环境的配置模板
- 明确了URL构建的优先级和逻辑
- 改善了配置文件的可理解性和可用性

现在用户可以根据部署环境选择正确的配置模板，
避免了主机地址配置错误导致的连接问题。

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,11 +1,12 @@
 # ===========================================
-# SSL证书管理系统 - 环境变量配置模板
+# SSL证书管理系统 - Docker环境配置模板
 # ===========================================
-#
+# 
 # 📋 使用说明:
-# 1. 复制此文件为 .env: cp .env.example .env
-# 2. 根据实际环境修改配置值
-# 3. 生产环境请务必修改所有密码和密钥！
+# 1. 此文件专用于Docker Compose环境
+# 2. 复制此文件为 .env: cp .env.docker.example .env
+# 3. 根据实际环境修改配置值
+# 4. 生产环境请务必修改所有密码和密钥！
 #
 # 🔐 安全提示:
 # - 所有包含"CHANGE_THIS"的值都必须修改
@@ -13,17 +14,10 @@
 # - 生成安全密钥命令: openssl rand -base64 32
 # - 生成安全密码命令: openssl rand -base64 16
 #
-# 🚀 快速部署:
-# - 开发环境: ./scripts/deploy-local.sh
-# - 生产环境: ./scripts/deploy-production.sh
-#
-# 📖 详细文档: 请参考 README.md 和 docs/ 目录
-#
-# 🐳 Docker环境说明:
-# - Docker Compose环境中，服务间通信使用服务名 (如mysql, redis)
-# - 独立部署环境中，使用实际IP地址 (如127.0.0.1, 192.168.1.100)
-# - 本配置文件默认使用127.0.0.1，适用于独立部署
-# - Docker环境请根据实际情况修改为服务名
+# 🐳 Docker环境特点:
+# - 使用Docker Compose服务名进行服务间通信
+# - 服务名: mysql, redis, backend, frontend, nginx
+# - 容器内部网络自动解析服务名为IP地址
 
 # ===========================================
 # 基础配置
@@ -31,10 +25,10 @@
 ENVIRONMENT=production
 
 # ===========================================
-# 数据库配置 (MySQL)
+# 数据库配置 (MySQL) - Docker环境
 # ===========================================
-# MySQL服务器地址 (Docker环境使用服务名mysql，独立部署使用127.0.0.1或实际IP)
-MYSQL_HOST=127.0.0.1
+# MySQL服务器地址 (使用Docker Compose服务名)
+MYSQL_HOST=mysql
 MYSQL_PORT=3306
 MYSQL_DATABASE=ssl_manager
 MYSQL_USER=ssl_manager
@@ -43,16 +37,14 @@ MYSQL_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD
 MYSQL_ROOT_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_ROOT_PASSWORD
 MYSQL_CHARSET=utf8mb4
 
-# 数据库连接URL (可选，程序会自动使用上述环境变量构建)
-# 如果设置了DATABASE_URL，将优先使用此URL，否则使用上述独立变量构建
-# 格式: mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?charset=${MYSQL_CHARSET}
-DATABASE_URL=mysql+pymysql://ssl_manager:CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD@127.0.0.1:3306/ssl_manager?charset=utf8mb4
+# 数据库连接URL (使用Docker服务名)
+DATABASE_URL=mysql+pymysql://ssl_manager:CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD@mysql:3306/ssl_manager?charset=utf8mb4
 
 # ===========================================
-# Redis配置
+# Redis配置 - Docker环境
 # ===========================================
-# Redis服务器地址 (Docker环境使用服务名redis，独立部署使用127.0.0.1或实际IP)
-REDIS_HOST=127.0.0.1
+# Redis服务器地址 (使用Docker Compose服务名)
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=CHANGE_THIS_TO_A_SECURE_REDIS_PASSWORD
 
@@ -97,7 +89,7 @@ VITE_API_BASE_URL=/api
 CORS_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # ===========================================
-# 服务端口配置 (可选，默认通过反向代理访问)
+# 服务端口配置
 # ===========================================
 BACKEND_PORT=8000
 FRONTEND_PORT=80
@@ -139,21 +131,6 @@ GRAFANA_USER=admin
 GRAFANA_PASSWORD=CHANGE_THIS_TO_A_SECURE_GRAFANA_PASSWORD
 
 # ===========================================
-# 阿里云特定配置 (可选)
-# ===========================================
-# 如果使用阿里云服务，可以配置以下参数
-# ALIYUN_ACCESS_KEY_ID=your_access_key_id
-# ALIYUN_ACCESS_KEY_SECRET=your_access_key_secret
-# ALIYUN_REGION=cn-hangzhou
-
-# ===========================================
-# 备份配置 (可选)
-# ===========================================
-# BACKUP_ENABLED=true
-# BACKUP_SCHEDULE=0 2 * * *
-# BACKUP_RETENTION_DAYS=30
-
-# ===========================================
 # 邮件通知配置 (可选)
 # ===========================================
 # SMTP服务器配置
@@ -164,9 +141,6 @@ SMTP_USERNAME=CHANGE_THIS_TO_YOUR_EMAIL@example.com
 SMTP_PASSWORD=CHANGE_THIS_TO_YOUR_EMAIL_PASSWORD
 SMTP_USE_TLS=true
 
-# 通知邮件配置
-# NOTIFICATION_EMAIL=admin@example.com
-
 # ===========================================
 # 前端开发配置 (开发环境使用)
 # ===========================================
@@ -176,10 +150,9 @@ VITE_DEV_SERVER_PORT=3000
 VITE_DEV_SERVER_OPEN=false
 VITE_DEV_SERVER_CORS=true
 
-# 代理配置
+# 代理配置 (指向Docker服务名)
 VITE_PROXY_ENABLED=true
-# 前端开发代理目标 (指向后端API服务)
-VITE_PROXY_TARGET=http://127.0.0.1:8000
+VITE_PROXY_TARGET=http://backend:8000
 
 # API配置
 API_BASE_URL=/api
@@ -195,22 +168,15 @@ VUE_APP_TITLE=SSL证书管理器
 VUE_APP_VERSION=1.0.0
 
 # ===========================================
-# 数据库初始化配置 (可选)
-# ===========================================
-# SKIP_DB_INIT=false
-# SKIP_MIGRATIONS=false
-
-# ===========================================
 # 安全配置 (高级)
 # ===========================================
 # 密码策略
 PASSWORD_MIN_LENGTH=8
 BCRYPT_LOG_ROUNDS=12
 
-# 速率限制
+# 速率限制 (使用Docker服务名)
 RATE_LIMIT_DEFAULT=100
-# 速率限制存储URL (程序会使用REDIS_HOST和REDIS_PORT构建)
-RATE_LIMIT_STORAGE_URL=redis://127.0.0.1:6379/1
+RATE_LIMIT_STORAGE_URL=redis://redis:6379/1
 
 # ===========================================
 # SSL证书管理配置 (高级)
@@ -226,19 +192,6 @@ CLIENT_OFFLINE_THRESHOLD=300
 # Webhook配置
 WEBHOOK_TIMEOUT=30
 WEBHOOK_RETRY_COUNT=3
-
-# ===========================================
-# 高级配置 (通常不需要修改)
-# ===========================================
-# Docker网络配置
-# NETWORK_SUBNET=172.20.0.0/16
-
-# 资源限制
-# MYSQL_MEMORY_LIMIT=1G
-# REDIS_MEMORY_LIMIT=512M
-# BACKEND_MEMORY_LIMIT=1G
-# FRONTEND_MEMORY_LIMIT=256M
-# NGINX_MEMORY_LIMIT=256M
 
 # ===========================================
 # MySQL高级配置 (可选)
@@ -267,8 +220,7 @@ MYSQL_SSL_KEY=/path/to/client-key.pem
 # Grafana管理员配置
 GRAFANA_ADMIN_PASSWORD=CHANGE_THIS_TO_A_SECURE_GRAFANA_ADMIN_PASSWORD
 
-# ELK Stack配置 (如果使用)
-# Elasticsearch服务器地址 (Docker环境使用服务名，独立部署使用实际IP)
-ELASTICSEARCH_HOSTS=127.0.0.1:9200
-KIBANA_HOST=127.0.0.1:5601
+# ELK Stack配置 (使用Docker服务名)
+ELASTICSEARCH_HOSTS=elasticsearch:9200
+KIBANA_HOST=kibana:5601
 FLUENTD_PORT=24224
