security: 移除MYSQL_ROOT_PASSWORD安全违规配置
🚨 重要安全修正:
- 从.env.example中移除MYSQL_ROOT_PASSWORD (应用程序不应使用root用户)
- 从.env.docker.example中移除MYSQL_ROOT_PASSWORD
- 添加安全说明注释，明确应用程序使用专用用户

🔧 Docker配置修正:
- 修正所有docker-compose文件中的健康检查
- 健康检查改为使用应用程序用户而非root用户
- 保持MYSQL_ROOT_PASSWORD仅用于容器初始化

🛠️ 验证工具增强:
- 验证脚本添加安全违规检查
- 自动过滤仅Docker使用的环境变量
- 检测不合规的root用户配置

📖 新增安全文档:
- MYSQL_SECURITY_COMPLIANCE.md - MySQL安全合规指南
- 详细说明为什么MYSQL_ROOT_PASSWORD不合规
- 提供正确的安全配置方案和最佳实践

🎯 安全改进:
- 遵循最小权限原则
- 应用程序只使用必要的数据库权限
- 符合安全审计和合规要求
- 降低安全风险和攻击面

✅ 验证结果:
- 环境变量配置验证通过
- 无安全违规配置
- 健康检查使用正确用户
- 权限分离清晰明确

感谢指出这个重要的安全问题！现在配置完全符合安全最佳实践。

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,10 @@ MYSQL_DATABASE=ssl_manager
 MYSQL_USER=ssl_manager
 MYSQL_USERNAME=ssl_manager
 MYSQL_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD
-MYSQL_ROOT_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_ROOT_PASSWORD
 MYSQL_CHARSET=utf8mb4
+
+# 注意：应用程序不应该使用MySQL root用户！
+# MYSQL_ROOT_PASSWORD 仅用于Docker容器初始化，应用程序使用上述专用用户
 
 # 数据库连接URL (可选，程序会自动使用上述环境变量构建)
 # 如果设置了DATABASE_URL，将优先使用此URL，否则使用上述独立变量构建
