--- a/.env.docker.example
+++ b/.env.docker.example
@@ -34,8 +34,10 @@ MYSQL_DATABASE=ssl_manager
 MYSQL_USER=ssl_manager
 MYSQL_USERNAME=ssl_manager
 MYSQL_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD
-MYSQL_ROOT_PASSWORD=CHANGE_THIS_TO_A_SECURE_MYSQL_ROOT_PASSWORD
 MYSQL_CHARSET=utf8mb4
+
+# 注意：应用程序不应该使用MySQL root用户！
+# MYSQL_ROOT_PASSWORD 仅用于Docker容器初始化，应用程序使用上述专用用户
 
 # 数据库连接URL (使用Docker服务名)
 DATABASE_URL=mysql+pymysql://ssl_manager:CHANGE_THIS_TO_A_SECURE_MYSQL_PASSWORD@mysql:3306/ssl_manager?charset=utf8mb4
