--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -44,7 +44,7 @@ services:
     networks:
       - ssl_manager_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${MYSQL_USER}", "-p${MYSQL_PASSWORD}"]
       timeout: 20s
       retries: 10
       interval: 30s
